# agent.py

./: .copier-answers.yml  .gitignore  CHANGELOG.md  README.md  agent.py  common.py  pyproject.toml  requirements.txt  ty.toml
.github/workflows/: release.yaml
agent/: agent.py
tests/: test_agent.py
trobz_agent/: agent.py
