[project]
name = "agent.py"
version = "0.2.0"
description = "Run an AI agent"
authors = [{name = "Hai Lang", email = "hailn@trobz.com"}]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer>=0.19.2"
]

[project.urls]
Repository = "https://github.com/trobz/agent.py"

[project.scripts]
agent = "agent.agent:cli"

[dependency-groups]
dev = [
    "pre-commit>=2.20.0",
    "ty>=0.0.1a16",
    "ruff>=0.11.5",
    "pytest>=7.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "agent"
module-root = ""


